--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -40,7 +40,7 @@
         <lombok.version>1.16.16</lombok.version>
         <springframework.version>4.3.13.RELEASE</springframework.version>
 
-        <mapstruct.version>1.2.0.Beta2</mapstruct.version>
+        <mapstruct.version>1.2.0.final</mapstruct.version>
 
         <!-- Maven plugins -->
 
